Fix header margin spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Rubik&display=swap');
 
 *{
-   /* margin: 0;
+   margin: 0;
     padding: 0;
     border: none;
-    box-sizing: border-box;*/
+    box-sizing: border-box;
 }
 
 body{
@@ -80,6 +80,7 @@ nav{
 #menu a{
     text-decoration: none;
     color: inherit;
+    transition: 0.2s;
 }
 
 
@@ -106,6 +107,7 @@ nav{
 
   position: relative;
   text-align: center;
+  margin-bottom: 5rem;
 }
 
 #image-text, #image-text h2{
